Remake the health pickup material, adjust armour and shield belt hue
The health pickup self-illumination doesn't seem to display properly in
OpenGL at the moment.

Signed-off-by: Dainius "GreatEmerald" Masiliunas <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -5,3 +5,4 @@
 * Sort out the textures of UDamage and health pickups
 * Add the health vial mesh and make them jump around
 * Figure out why Like the Back of My Hand crashes
+* Fix the MaterialManager to work with the new pickups
