Update to Link ammo and UDamage textures
The UDamage now looks crystalline, which is not that true to the original,
but in this case I believe that the "oompf" factor is more important than
being true to the original.

Signed-off-by: Dainius "GreatEmerald" Masiliunas <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -6,3 +6,5 @@
 * Add the health vial mesh and make them jump around
 * Figure out why Like the Back of My Hand crashes
 * Fix the MaterialManager to work with the new pickups
+* Figure out why some things are not replaced (Rocket ammo in FaceClassic, vials in BridgeOfFate)
+* Figure out why some things don't spawn (UDamage, vials in red base of CTF-Avaris)
