Adjustment to the Instagib and Sniper Rifle (both team colour) materials
Signed-off-by: Dainius "GreatEmerald" Masiliunas <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -11,3 +11,6 @@
 * Fix the 0 < n < 3 rocket infinite ammo exploit
 * Adjust the placement of weapons when SmallWeapons are off
 * Adjust the placement of AVRiL and the others when viewing from a 4:3 resolution
+* Make the Link Gun fire immediately, without waiting for anims
+* Can we get the Sniper Rifle scope to become on even if the key is released before the scope is on?
+* Disable team-coloured shock rifles outside of Instagib
