Fix to the online issue where one couldn't fire any weapons
Also adds the mutator into ServerPackages automatically for convenience.
The main issue was actually with the Enforcer, where it wouldn't end
playing the loading animation due to the function being overridden as
unsimulated.

Signed-off-by: Dainius "GreatEmerald" Masiliunas <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -14,3 +14,6 @@
 * Make the Link Gun fire immediately, without waiting for anims
 * Can we get the Sniper Rifle scope to become on even if the key is released before the scope is on?
 * Disable team-coloured shock rifles outside of Instagib
+* Online: Biorifle alt fire sound doesn't play
+* Online: Rocket Launcher alt fire effects don't play, reverts to UT2004 behaviour
+* Online: Enforcer alt-fire reverts to UT2004 behaviour, although the effects play fine
