Addition of the weapon base mesh and materials, some pickup highlights
The weapon base is not yet enabled, and the highlight materials are only
for the AVRIL and Bio Rifle.

Signed-off-by: Dainius "GreatEmerald" Masiliunas <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -15,3 +15,4 @@
 * Prevent picking up Enforcer clips when full on ammo
 * Adjust the pickups' Weapon Locker offset
 * Find a way to make a glowy overlay effect on pickups
+* Enable the glow functionality of pickup bases
