--- a/TODO.TXT
+++ b/TODO.TXT
@@ -11,4 +11,5 @@
 * Online: Weapon lockers use old meshes
 * Prevent picking up Enforcer clips when full on ammo
 * Adjust the pickups' Weapon Locker offset
-* Replace pickup bases with custom ones
+* Precache all weapon and pickup resources
+* Make all pickups use the counting messages
