Adjustment to the Rocket Launcher firing speed
Now it seems to be closer to the one in UT3.

Signed-off-by: Dainius "GreatEmerald" Masiliunas <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,7 +1,6 @@
 * Remove all #exec embeds and move them out into actual external packages
 * Fix the MaterialManager to work with the new pickups
 * Figure out why some things don't spawn (UDamage, vials in red base of CTF-Avaris)
-* Check whether the Rocket Launcher loads rockets too fast
 * Make the Link Gun fire immediately, without waiting for anims
 * Can we get the Sniper Rifle scope to become on even if the key is released before the scope is on?
 * Online: Link Gun doesn't alt-fire
@@ -12,3 +11,4 @@
 * Adjust the pickups' Weapon Locker offset
 * Precache all weapon and pickup resources
 * Make all pickups use the counting messages
+* Remove all logs and clientmessages
