Spawn effect for all ammo pickups, network fix
Now only armour and UDamage are left for the spawn effect. And it works
online now.

Signed-off-by: GreatEmerald <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -5,5 +5,6 @@
 * Online: Sniper doesn't zoom
 * Online: Weapon lockers use old meshes
 * Adjust the pickups' Weapon Locker offset
+* Test weapons without always on (even if Epic themselves barely tested it)
 * Remove old inherited precache statements
 * Remove all logs and clientmessages
