--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,7 +1,7 @@
-* Online: Link Gun doesn't alt-fire
 * Online: Enforcer alt-fire reverts to UT2004 behaviour, although the effects play fine
 * Online: Weapon lockers use old meshes
 * Adjust the pickups' Weapon Locker offset
+* Add Thigh Pads and Helmets
 * Test weapons without always on (even if Epic themselves barely tested it)
 * Solve UDamage base colour problems
 * Create UDamage overlay effect
