Fix for Impact Hammer online animation issues
This bug is actually in the stock game...

Signed-off-by: GreatEmerald <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,11 +1,13 @@
-* Online: The Impact Hammer animations get stuck after a while
 * Online: Weapon lockers use old meshes
 * Adjust the pickups' Weapon Locker offset
 * Add Thigh Pads and Helmets
+* Check base glow meshes
 * Test weapons without always on (even if Epic themselves barely tested it)
 * Solve UDamage base colour problems
+* Online: UDamage emits sounds before spawning
 * Create UDamage overlay effect
 * Alter the weapon despawn effect so they would spin
+* Add support for weapon put down sounds
 * Remove old inherited precache statements
 * Remove all logs and clientmessages
 * Remove all obsolete code
