--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,4 +1,3 @@
-* Add Helmets
 * Test weapons without always on (even if Epic themselves barely tested it)
 * Solve UDamage base colour problems
 * Online: UDamage emits sounds before spawning
@@ -7,6 +6,7 @@
 * Alter the weapon despawn effect so they would spin
 * Add support for weapon put down sounds
 * Online: Sniper tracer origin stays in place when moving scoped
+* Test pickup reset after round end
 * Remove old inherited precache statements
 - Add new vehicle meshes
 - Bundle UT3 announcements
