Fix for weapon bases not turning off when weapon is picked up
More of a refactoring, since now all weapon pickups base off
UT3WeaponPickup. Not entirely true to the original, but the original was
limited in that it reverted to the UT1 system of not having pickup classes
for weapons.

Signed-off-by: GreatEmerald <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,4 +1,3 @@
-* Test weapons without always on (even if Epic themselves barely tested it)
 * Solve UDamage base colour problems
 * Online: UDamage emits sounds before spawning
 * Create UDamage overlay effect
@@ -6,8 +5,10 @@
 * Alter the weapon despawn effect so they would spin
 * Add support for weapon put down sounds
 * Online: Sniper tracer origin stays in place when moving scoped
+* Fix Rocket Launcher firing three rockets in one initially
 * Test pickup reset after round end
 * Remove old inherited precache statements
+* Update Helmet mesh
 - Add new vehicle meshes
 - Bundle UT3 announcements
 * Remove all logs and clientmessages
