--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,4 +1,3 @@
-* Create UDamage overlay effect
 * Fix wildcard base appearance
 * Alter the weapon despawn effect so they would spin
 * Add support for weapon put down sounds
@@ -16,3 +15,4 @@
 - Add precache statements for particles and projectiles
 - Implement UT3 HUD
 - Implement UT3 crosshairs
+- Try reimplementing the UDamage overlay effect with an attachment
