--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,4 +1,3 @@
-* Fix Rocket Launcher firing three rockets in one initially
 * Test pickup reset after round end
 * Doublecheck item DrawScale
 - Add new vehicle meshes
@@ -10,4 +9,5 @@
 - Add precache statements for particles and projectiles
 - Implement UT3 HUD
 - Implement UT3 crosshairs
-- Try reimplementing the UDamage overlay effect with an attachment
+- Try reimplementing the UDamage overlay effect with an attachment?
+- Record UT3 RL alt fire loading and sync the modded one
