Inclusion of the weapon milestone announcements, adjusted to the UT3 weaps
It's also a bit simpler than the original (some of the announcements will
need to be added in a more proper fashion).

Signed-off-by: GreatEmerald <pastas4@gmail.com>

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,6 +1,5 @@
-* Doublecheck item DrawScale
 - Add new vehicle meshes
-- Bundle UT3 announcements
+* Doublecheck weapon DrawScale
 * Remove all logs and clientmessages
 * Including online
 * Remove all obsolete code
